# subisomorphism-CUDA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  job.sh  job.slurm  main.cu  makefile  old-Makefile  parser.c
include/: GPU_TIME.h  dep.h  gpu-time.h  iso.h  old-parser.h  parser.h  time.cuh
scripts/: check.py  download_datasets.py  plotter.py
src/: a.out  first.cu  gpu-main.cu  gpu-time.cu  iso.c  main.c  main.cu  parser.c  parser.cpp  seq-main.c  time.cu  trial.c
src/graph/: graph.c  graph.h
src/match/: iso.c  iso.h  match.cu  match.cuh  sub-iso.c  sub-iso.h  vf2.cpp
src/old/: old-parser.h  parser.c  parser.cpp
src/parsing/: parser.c  parser.h
src/sequential/: main.c
src/tests/: test-parser.c  test-sub-iso.c
src/timer/: time.cu  time.cuh
src/utils/: utils.cu  utils.cuh
toy/: g1.mtx  g2.mtx
